Fix alignment issue

--- a/default.css
+++ b/default.css
@@ -28,5 +28,5 @@ div.links {
 	vertical-align: middle;
 }
 .post {
-	padding-left: 50px
+	padding-left: 20%;
 }
